== master

* Round to two decimal places for rating averages

== 0.0.2 / 2008-06-22

* Remove log files from gems

== 0.0.1 / 2008-05-09

* Initial public release